Use dorny/paths-filter to skip CI jobs on docs-only PRs

--- a/.github/workflows/check-codegen.yml
+++ b/.github/workflows/check-codegen.yml
@@ -2,13 +2,27 @@ name: Check Codegen
 
 on:
   pull_request:
-    paths-ignore:
-    - 'docs/**'
-    - '**/*.md'
 
 jobs:
+  changes:
+    name: Detect changes
+    runs-on: ubuntu-latest
+    outputs:
+      code: ${{ steps.filter.outputs.code }}
+    steps:
+    - uses: actions/checkout@v6
+    - uses: dorny/paths-filter@v3
+      id: filter
+      with:
+        filters: |
+          code:
+            - '!docs/**'
+            - '!**/*.md'
+
   check-codegen:
     name: Run code generation checks
+    needs: changes
+    if: needs.changes.outputs.code == 'true'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
