--- a/config/crd/bases/metal.ironcore.dev_endpoints.yaml
+++ b/config/crd/bases/metal.ironcore.dev_endpoints.yaml
@@ -11,6 +11,8 @@ spec:
     kind: Endpoint
     listKind: EndpointList
     plural: endpoints
+    shortNames:
+    - mep
     singular: endpoint
   scope: Cluster
   versions:
