--- a/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
+++ b/config/crd/bases/metal.ironcore.dev_serverclaims.yaml
@@ -11,6 +11,8 @@ spec:
     kind: ServerClaim
     listKind: ServerClaimList
     plural: serverclaims
+    shortNames:
+    - scl
     singular: serverclaim
   scope: Namespaced
   versions:
@@ -57,8 +59,8 @@ spec:
             properties:
               ignitionSecretRef:
                 description: |-
-                  IgnitionSecretRef is a reference to the Kubernetes Secret object that contains
-                  the ignition configuration for the server. This field is optional and can be omitted if not specified.
+                  IgnitionSecretRef is a reference to the Secret object that contains
+                  the ignition configuration for the server.
                 properties:
                   name:
                     default: ""
@@ -78,9 +80,7 @@ spec:
                 description: Power specifies the desired power state of the server.
                 type: string
               serverRef:
-                description: |-
-                  ServerRef is a reference to a specific server to be claimed.
-                  This field is optional and can be omitted if the server is to be selected using ServerSelector.
+                description: ServerRef is a reference to a specific server to be claimed.
                 properties:
                   name:
                     default: ""
@@ -97,9 +97,8 @@ spec:
                 - message: serverRef is immutable
                   rule: self == oldSelf
               serverSelector:
-                description: |-
-                  ServerSelector specifies a label selector to identify the server to be claimed.
-                  This field is optional and can be omitted if a specific server is referenced using ServerRef.
+                description: ServerSelector specifies a label selector to identify
+                  the server to be claimed.
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
