Kubebuilder update from v4.11.1 to v4.12.0 (#686)
* chore(kubebuilder): (:warning: manual conflict resolution required) update scaffold v4.11.1 -> v4.12.0

* Fix conflicts and resolve some linter issues

* Fix logcheck linting issues

* Cleanup

* Update reuse configuration

* add .custom-gcl.yml to reuse exceptions

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Alan Sergeant <alan.sergeant@sap.com>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -5,10 +5,12 @@ SPDX-PackageDownloadLocation = "https://github.com/ironcore-dev/metal-operator"
 
 [[annotations]]
 path = [
+    ".devcontainer/**",
     ".github/**",
     ".gitignore",
     ".dockerignore",
     ".golangci.yml",
+    ".custom-gcl.yml",
     "CODEOWNERS",
     "Dockerfile",
     "Makefile",
