--- a/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
@@ -62,6 +62,14 @@ spec:
                 description: Policy specifies the maintenance policy to be enforced
                   on the server.
                 type: string
+              priority:
+                description: Priority determines ordering when multiple ServerMaintenance
+                  resources target the same server. Higher values are processed first.
+                  If priorities are equal, older resources are processed first. If
+                  omitted, priority is treated as 0.
+                default: 0
+                format: int32
+                type: integer
               serverBootConfigurationTemplate:
                 description: ServerBootConfigurationTemplate specifies the boot configuration
                   to be applied to the server during maintenance.
