--- a/config/samples/metal_v1alpha1_servermaintenance.yaml
+++ b/config/samples/metal_v1alpha1_servermaintenance.yaml
@@ -6,4 +6,8 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: servermaintenance-sample
 spec:
-  # TODO(user): Add fields here
+  serverRef:
+    name: example-server
+  policy: Enforced
+  priority: 100
+  serverPower: Off
