Rename short names for bios resources

--- a/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
@@ -12,7 +12,7 @@ spec:
     listKind: BIOSSettingsSetList
     plural: biossettingssets
     shortNames:
-    - bss
+    - biosss
     singular: biossettingsset
   scope: Cluster
   versions:
