--- a/config/crd/bases/metal.ironcore.dev_biosversions.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversions.yaml
@@ -12,7 +12,7 @@ spec:
     listKind: BIOSVersionList
     plural: biosversions
     shortNames:
-    - bv
+    - biosv
     singular: biosversion
   scope: Cluster
   versions:
