--- a/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
@@ -12,7 +12,7 @@ spec:
     listKind: BIOSVersionSetList
     plural: biosversionsets
     shortNames:
-    - bvs
+    - biosvs
     singular: biosversionset
   scope: Cluster
   versions:
