--- a/config/crd/bases/metal.ironcore.dev_bmcsecrets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsecrets.yaml
@@ -11,6 +11,8 @@ spec:
     kind: BMCSecret
     listKind: BMCSecretList
     plural: bmcsecrets
+    shortNames:
+    - bmcsec
     singular: bmcsecret
   scope: Cluster
   versions:
