Auto retry failed state, BMCSettingSet retry child, unit tests

--- a/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
@@ -70,6 +70,12 @@ spec:
                 description: BIOSSettingsTemplate defines the template for the BIOSSettings
                   resource to be applied to the servers.
                 properties:
+                  failedAutoRetryCount:
+                    description: FailedAutoRetryCount is the number of times the controller
+                      should automatically retry the bios upgrade in case of failure
+                      before giving up.
+                    format: int32
+                    type: integer
                   serverMaintenancePolicy:
                     description: ServerMaintenancePolicy is a maintenance policy to
                       be enforced on the server.
