--- a/config/crd/bases/metal.ironcore.dev_bmcversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcversionsets.yaml
@@ -117,6 +117,12 @@ spec:
                 description: BMCVersionTemplate defines the template for the BMCVersion
                   resource to be applied to the BMCs.
                 properties:
+                  failedAutoRetryCount:
+                    description: FailedAutoRetryCount is the number of times the controller
+                      should automatically retry the bios upgrade in case of failure
+                      before giving up.
+                    format: int32
+                    type: integer
                   image:
                     description: Image specifies the image to use to upgrade to the
                       given BMC version.
