Add CLAUDE.md to point to AGENTS.md

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -36,7 +36,8 @@ SPDX-License-Identifier = "Apache-2.0"
 path = [
     "docs/**",
     "README.md",
-    "AGENTS.md"
+    "AGENTS.md",
+    "CLAUDE.md"
 ]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2024 SAP SE or an SAP affiliate company and IronCore contributors"
