--- a/config/crd/bases/metal.ironcore.dev_bmcsettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettingssets.yaml
@@ -117,8 +117,8 @@ spec:
                 properties:
                   failedAutoRetryCount:
                     description: FailedAutoRetryCount is the number of times the controller
-                      should automatically retry the bios upgrade in case of failure
-                      before giving up.
+                      should automatically retry the BMCSettings upgrade in case of
+                      failure before giving up.
                     format: int32
                     type: integer
                   serverMaintenancePolicy:
