--- a/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
@@ -69,8 +69,8 @@ spec:
                   rule: self == oldSelf
               failedAutoRetryCount:
                 description: FailedAutoRetryCount is the number of times the controller
-                  should automatically retry the bios upgrade in case of failure before
-                  giving up.
+                  should automatically retry the BMCSettings upgrade in case of failure
+                  before giving up.
                 format: int32
                 type: integer
               serverMaintenancePolicy:
@@ -134,8 +134,8 @@ spec:
             properties:
               autoRetryCountRemaining:
                 description: AutoRetryCountRemaining is the number of remaining times
-                  the controller will automatically retry the bios upgrade in case
-                  of failure before giving up.
+                  the controller will automatically retry the BMCSettings upgrade
+                  in case of failure before giving up.
                 format: int32
                 type: integer
               conditions:
