--- a/config/samples/topology/rack2/server5.yaml
+++ b/config/samples/topology/rack2/server5.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "5"
   name: server-2-5
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000205"
   bmcRef:
     name: sample-bmc
   power: "Off"
