--- a/config/samples/topology/rack1/server8.yaml
+++ b/config/samples/topology/rack1/server8.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "8"
   name: server-1-8
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000108"
   bmcRef:
     name: sample-bmc
   power: "Off"
