--- a/config/samples/topology/rack2/server1.yaml
+++ b/config/samples/topology/rack2/server1.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "1"
   name: server-2-1
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000201"
   bmcRef:
     name: sample-bmc
   power: "Off"
