--- a/config/samples/topology/rack2/server4.yaml
+++ b/config/samples/topology/rack2/server4.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "4"
   name: server-2-4
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000204"
   bmcRef:
     name: sample-bmc
   power: "Off"
