--- a/config/samples/topology/rack2/server6.yaml
+++ b/config/samples/topology/rack2/server6.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "6"
   name: server-2-6
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000206"
   bmcRef:
     name: sample-bmc
   power: "Off"
