--- a/config/samples/topology/rack2/server7.yaml
+++ b/config/samples/topology/rack2/server7.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "7"
   name: server-2-7
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000207"
   bmcRef:
     name: sample-bmc
   power: "Off"
