--- a/config/samples/topology/rack3/server3.yaml
+++ b/config/samples/topology/rack3/server3.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "3"
   name: server-3-3
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000303"
   bmcRef:
     name: sample-bmc
   power: "Off"
