--- a/config/samples/topology/rack3/server9.yaml
+++ b/config/samples/topology/rack3/server9.yaml
@@ -6,6 +6,7 @@ metadata:
     topology.metal.ironcore.dev/heightunit: "9"
   name: server-3-9
 spec:
+  systemUUID: "00000000-0000-0000-0000-000000000309"
   bmcRef:
     name: sample-bmc
   power: "Off"
