Review comments by AI

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -61,9 +61,9 @@ spec:
             description: BIOSSettingsSpec defines the desired state of BIOSSettings.
             properties:
               failedAutoRetryCount:
-                description: FailedAutoRetryCount is the number of times the controller
-                  should automatically retry the BIOSSettings upgrade in case of failure
-                  before giving up.
+                description: |-
+                  FailedAutoRetryCount is the number of times the controller should automatically retry the BIOSSettings upgrade in case of failure before giving up.
+                  kubebuilder:validation:Minimum=0
                 format: int32
                 type: integer
               serverMaintenancePolicy:
