--- a/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettings.yaml
@@ -68,9 +68,9 @@ spec:
                 - message: BMCRef is immutable
                   rule: self == oldSelf
               failedAutoRetryCount:
-                description: FailedAutoRetryCount is the number of times the controller
-                  should automatically retry the BMCSettings upgrade in case of failure
-                  before giving up.
+                description: |-
+                  FailedAutoRetryCount is the number of times the controller should automatically retry the BMCSettings upgrade in case of failure before giving up.
+                  kubebuilder:validation:Minimum=0
                 format: int32
                 type: integer
               serverMaintenancePolicy:
