--- a/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
@@ -71,9 +71,9 @@ spec:
                   resource to be applied to the servers.
                 properties:
                   failedAutoRetryCount:
-                    description: FailedAutoRetryCount is the number of times the controller
-                      should automatically retry the BIOSVersion upgrade in case of
-                      failure before giving up.
+                    description: |-
+                      FailedAutoRetryCount is the number of times the controller should automatically retry the BIOSVersion upgrade in case of failure before giving up.
+                      kubebuilder:validation:Minimum=0
                     format: int32
                     type: integer
                   image:
