--- a/config/crd/bases/metal.ironcore.dev_bmcsettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcsettingssets.yaml
@@ -116,9 +116,9 @@ spec:
                   resource to be applied to the BMCs.
                 properties:
                   failedAutoRetryCount:
-                    description: FailedAutoRetryCount is the number of times the controller
-                      should automatically retry the BMCSettings upgrade in case of
-                      failure before giving up.
+                    description: |-
+                      FailedAutoRetryCount is the number of times the controller should automatically retry the BMCSettings upgrade in case of failure before giving up.
+                      kubebuilder:validation:Minimum=0
                     format: int32
                     type: integer
                   serverMaintenancePolicy:
