--- a/config/crd/bases/metal.ironcore.dev_bmcversions.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcversions.yaml
@@ -85,9 +85,9 @@ spec:
                 - message: bmcRef is immutable
                   rule: self == oldSelf
               failedAutoRetryCount:
-                description: FailedAutoRetryCount is the number of times the controller
-                  should automatically retry the BMCVersion upgrade in case of failure
-                  before giving up.
+                description: |-
+                  FailedAutoRetryCount is the number of times the controller should automatically retry the BMCVersion upgrade in case of failure before giving up.
+                  kubebuilder:validation:Minimum=0
                 format: int32
                 type: integer
               image:
