--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -54,6 +54,7 @@ rules:
   - endpoints
   - serverbootconfigurations
   - serverclaims
+  - servercleanings
   - serverconfigurations
   - servermaintenances
   - servers
@@ -82,6 +83,7 @@ rules:
   - endpoints/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
+  - servercleanings/finalizers
   - servermaintenances/finalizers
   - servers/finalizers
   verbs:
@@ -103,6 +105,7 @@ rules:
   - endpoints/status
   - serverbootconfigurations/status
   - serverclaims/status
+  - servercleanings/status
   - servermaintenances/status
   - servers/status
   verbs:
