--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -61,10 +61,11 @@ spec:
             description: BIOSSettingsSpec defines the desired state of BIOSSettings.
             properties:
               failedAutoRetryCount:
-                description: |-
-                  FailedAutoRetryCount is the number of times the controller should automatically retry the BIOSSettings upgrade in case of failure before giving up.
-                  kubebuilder:validation:Minimum=0
+                description: FailedAutoRetryCount is the number of times the controller
+                  should automatically retry the BIOSSettings upgrade in case of failure
+                  before giving up.
                 format: int32
+                minimum: 0
                 type: integer
               serverMaintenancePolicy:
                 description: ServerMaintenancePolicy is a maintenance policy to be
